# cosmic-rays

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  README_Installer.txt  SECURITY.md  [LEGACY]_Comisc Rays.jucer  generate_version.py  install.bat  install.sh  renovate.json  version.txt
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  dsp_artifact.yml  feature_request.yml
.github/workflows/: main.yml
Legacy/: [LEGACY]_Cosmic Rays.jucer
Release_Beta_3-10-2026/macOS/Cosmic Rays.vst3/Contents/_CodeSignature/: CodeResources
Release_Beta_3-10-2026/macOS/Install_CosmicRays.app/Contents/Resources/Scripts/: main.scpt
Release_Beta_3-12-2026/macOS/Cosmic Rays.component/Contents/MacOS/: Cosmic Rays
Release_Beta_3-12-2026/macOS/Cosmic Rays.lv2/: dsp.ttl  manifest.ttl  ui.ttl
Release_Beta_3-12-2026/macOS/Cosmic Rays.vst3/Contents/MacOS/: Cosmic Rays
Release_Beta_3-12-2026/macOS/Install_CosmicRays.app/Contents/: Info.plist
Release_Beta_3-12-2026/macOS/Install_CosmicRays.app/Contents/MacOS/: applet
Release_Beta_3-2-2026/macOS/Cosmic Rays.component/Contents/MacOS/: Cosmic Rays
Release_Beta_3-2-2026/macOS/Cosmic Rays.lv2/: dsp.ttl
Release_Beta_3-2-2026/macOS/Cosmic Rays.vst3/Contents/: Info.plist
Release_Beta_3-2-2026/macOS/Cosmic Rays.vst3/Contents/MacOS/: Cosmic Rays
Release_Beta_3-3-2026/Linux/: Install_CosmicRays.sh
Release_Beta_3-3-2026/macOS/Cosmic Rays.component/Contents/: Info.plist
Release_Beta_3-3-2026/macOS/Cosmic Rays.component/Contents/MacOS/: Cosmic Rays
Release_Beta_3-3-2026/macOS/Install_CosmicRays.app/Contents/_CodeSignature/: CodeResources
Scripts/: generate_version.py
Source/: GranularEngine.cpp  GranularEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Version.h
Source/dsp/: BufferReaders.h
Source/helpers/: Helpers.h
backend/: cosmic-rays-backend.js  email_manager.py  schema.sql  wrangler.toml
cmake/: PamplejuceLinux.cmake  PamplejuceStandard.cmake  PamplejuceVersioning.cmake  PamplejuceWindows.cmake  generate_version.py
docs/: index.html
releases/Release_13.03.2026-1549/: Install_CosmicRays.bat  Install_CosmicRays.sh
releases/Release_13.03.2026-1549/Linux/Cosmic Rays.lv2/: dsp.ttl
releases/Release_13.03.2026-1549/macOS/Cosmic Rays.vst3/Contents/Resources/: moduleinfo.json
releases/Release_18.03.2026-0903/: Install_CosmicRays.bat  version.txt
releases/Release_18.03.2026-0903/macOS/: CosmicRays-1.0.0-Darwin.pkg
releases/Release_Beta_3-12-2026/macOS/Cosmic Rays.lv2/: dsp.ttl
releases/Release_Beta_3-12-2026/macOS/Cosmic Rays.vst3/Contents/MacOS/: Cosmic Rays
source/: GranularEngine.cpp  GranularEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.h  Version.h
